@@ -15,3 +15,5 @@ Flügel
 Ei
 Verhalten
 Haus
+Krawehl
+Pusselsumm
